--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Poppins:wght@100;400;500;600;700;800&display=swap');
+
 /* You can add global styles to this file, and also import other style files */
+:root {
+  --primary-color: #2F1747;
+  --secondary-color: #FFCB47;
+  --light-color: #ffffff;
+  --dark-color: #000000;
+  --gray-color: #674C82;
+  --font-main: "Inria Sans", sans-serif;
+}
+
+/* Reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: var(--font-main), sans-serif;
+  color: var(--light-color);
+  background-color: var(--primary-color);
+  line-height: 1.6;
+  overflow-x: hidden;
+}
