--- a/src/app/pages/public/register/register.html
+++ b/src/app/pages/public/register/register.html
@@ -1,1 +1,7 @@
-<p>register works!</p>
+<main class="main-register-content">
+  <section class="register-content">
+      <h2 class="register-header">Bienvenidos!</h2>
+      <app-form-register/>
+  </section>
+  <img class="img-register" src="images/person-look-at-the-paper.png" alt="Persona con sus amigos mirando a un papel">
+</main>
