adding login endpoints and register career endpoints

--- a/src/app/pages/public/register/components/form-register/form-register.html
+++ b/src/app/pages/public/register/components/form-register/form-register.html
@@ -35,7 +35,7 @@
     <app-select
       id="register-student-select-career"
       label="Selecciona una carrera"
-      [options]="careerOptions"
+      [options]="careerGroup()"
       [control]="careerControl"
     />
 
