--- a/src/app/pages/public/login/login.html
+++ b/src/app/pages/public/login/login.html
@@ -53,10 +53,11 @@
         color="primary"
         type="submit"
         class="btn-login"
-        [disabled]="loginForm.invalid"
+        [disabled]="loginForm.invalid || loading()"
       >
-        Iniciar sesión
+        {{ loading() ? 'Ingresando...' : 'Iniciar sesión' }}
       </button>
+
     </form>
 
     <p class="register-link">
