feat: add admin dashboard with custom sidenav and user management components

--- a/src/app/layout/private/admin/authenticated-admin-header/authenticated-admin-header.component.html
+++ b/src/app/layout/private/admin/authenticated-admin-header/authenticated-admin-header.component.html
@@ -1,1 +1,5 @@
-<p>authenticated-admin-header works!</p>
+<mat-toolbar class="header-content">
+  <button mat-icon-button (click)="onToggleSidenav()">
+    <mat-icon>menu</mat-icon>
+  </button>
+</mat-toolbar>
