--- a/src/app/pages/private/user/user-profesores/user-profesores.component.html
+++ b/src/app/pages/private/user/user-profesores/user-profesores.component.html
@@ -1,26 +1,33 @@
 <main class="centro">
   <div class="search-container">
-    <input type="text" placeholder="Buscar profesor o curso..." [(ngModel)]="searchQuery" id="searchBar">
+    <input
+      type="text"
+      placeholder="Buscar profesor o curso..."
+      [(ngModel)]="searchQuery"
+      id="searchBar"
+    />
     <button id="searchButton" (click)="search()">
-      <img src="images/lupa.png" alt="Buscar">
+      <img src="images/lupa.png" alt="Buscar" />
     </button>
   </div>
 
   <div class="filtro">
-    <button id="filtroboton" (click)="toggleFiltro()"> <img src="images/filtro.png" alt="Filtro">Filtros</button>
+    <button id="filtroboton" (click)="toggleFiltro()">
+      <img src="images/filtro.png" alt="Filtro" />Filtros
+    </button>
   </div>
 
   <app-filtro *ngIf="showFiltro"></app-filtro>
 
   <section class="profesores-seccion" *ngFor="let profesor of profesores">
-    <h2>{{profesor.facultad}}</h2>
+    <h2>{{ profesor.facultad }}</h2>
     <div class="profesores-lista">
       <div class="profesor" *ngFor="let item of profesor.items">
-        <img [src]="item.imagen" alt="{{item.nombre}}">
+        <img [src]="item.imagen" alt="{{ item.nombre }}" />
         <div class="info">
-          <h3>{{item.nombre}}</h3>
-          <p>Facultad Que Dicta: {{item.facultad}}</p>
-          <p>Calificación: ⭐ {{item.calificacion}}/10</p>
+          <h3>{{ item.nombre }}</h3>
+          <p>Facultad Que Dicta: {{ item.facultad }}</p>
+          <p>Calificación: ⭐ {{ item.calificacion }}/10</p>
         </div>
         <button class="add-button" (click)="addToProfile(item)">+</button>
       </div>
@@ -38,4 +45,3 @@
 </footer>
 
 <app-chatbot [visible]="chatbotVisible"></app-chatbot>
-
