feat:Añadí la sección Formality

--- a/src/app/layout/private/user/authenticated-user-header/header.component.html
+++ b/src/app/layout/private/user/authenticated-user-header/header.component.html
@@ -7,7 +7,7 @@
     <nav class="menu">
       <ul class="menu-items largo">
         <li><button routerLink="/private/profesores">Profesores</button></li>
-        <li><button routerLink="/tramites">Trámites</button></li>
+        <li><button routerLink="/private/tramites">Trámites</button></li>
         <li><button routerLink="/biblioteca">Biblioteca</button></li>
       </ul>
       <ul class="menu-items corto">
