adding feature student profile

--- a/src/app/layout/private/user/authenticated-user-header/header.component.html
+++ b/src/app/layout/private/user/authenticated-user-header/header.component.html
@@ -11,7 +11,7 @@
         <li><button routerLink="/biblioteca">Biblioteca</button></li>
       </ul>
       <ul class="menu-items corto">
-        <li><button class="perfil" routerLink="/perfil">Perfil</button></li>
+        <li><button class="perfil" routerLink="/private/student">Perfil</button></li>
         <li><button class="cerrar" routerLink="/login">Cerrar sesión</button></li>
       </ul>
     </nav>
