--- a/src/app/pages/public/landing/cta-component/cta-component.html
+++ b/src/app/pages/public/landing/cta-component/cta-component.html
@@ -1,5 +1,5 @@
 <!-- Call to Action -->
 <section id="cta" class="cta">
   <h2>¿Listo para mejorar tu experiencia universitaria?</h2>
-  <button [routerLink]="'private/home'">Regístrate ahora</button>
+  <button [routerLink]="'/private/home'">Regístrate ahora</button>
 </section>
