feat: Implement Solicitudes Management Page
- Added solicitudes.html and solicitudes.ts for managing professor requests.
- Created a table to display requests with columns for ID, name, email, specialty, request date, requester, status, and actions.
- Implemented methods for approving, rejecting, and viewing details of requests.

feat: Create User Form Dialog Component

- Developed user-form-dialog.html and user-form-dialog.ts for user management.
- Included form fields for username, email, role, and profile picture upload.
- Added validation and handling for student-specific fields.

feat: Enhance User Management Search Form

- Created user-management-search-form.html and user-management-search-form.ts for advanced user searching.
- Implemented filters for username, role, state, and date range.
- Integrated role options from the RolesService.

feat: Add Auth Interceptor for API Requests

- Implemented auth-interceptor.ts to attach JWT token to outgoing requests.
- Ensured token is not added to login requests.

feat: Develop Roles and Students Services

- Created roles.ts and students.ts services for handling role and student-related API calls.
- Implemented methods for fetching roles and updating student information.

test: Add Unit Tests for Services and Components

- Added unit tests for AuthInterceptor, ApplicationUserService, Students service, and UserManagementSearchForm component.

--- a/src/app/components/forms/input/input.html
+++ b/src/app/components/forms/input/input.html
@@ -1,18 +1,17 @@
 <div class="input-wrapper">
- <mat-form-field class="input-container">
-    <mat-label >{{label()}}</mat-label>
+  <mat-form-field class="input-container" [appearance]="variant()">
+    <mat-label>{{ label() }}</mat-label>
     <input
-    matInput
-    class="input-content"
-    [id]="id()"
-    [placeholder]="placeholder()"
-    [type]="type()"
-    [formControl]="control()"
-    (blur)="updateErrorMessage()"
-    >
-  @if (control().invalid ) {
-      <mat-error>{{ errorMessage() }}</mat-error>
-  }
+      matInput
+      class="input-content"
+      [id]="id()"
+      [placeholder]="placeholder()"
+      [type]="type()"
+      [formControl]="control()"
+      (blur)="updateErrorMessage()"
+    />
+    @if (control().invalid ) {
+    <mat-error>{{ errorMessage() }}</mat-error>
+    }
   </mat-form-field>
-
 </div>
