feat:Agregué la sección Biblioteca

--- a/src/app/layout/private/user/authenticated-user-header/header.component.html
+++ b/src/app/layout/private/user/authenticated-user-header/header.component.html
@@ -8,7 +8,7 @@
       <ul class="menu-items largo">
         <li><button routerLink="/private/profesores">Profesores</button></li>
         <li><button routerLink="/private/tramites">Trámites</button></li>
-        <li><button routerLink="/biblioteca">Biblioteca</button></li>
+        <li><button routerLink="/private/biblioteca">Biblioteca</button></li>
       </ul>
       <ul class="menu-items corto">
         <li><button class="perfil" routerLink="/private/student">Perfil</button></li>
