--- a/src/app/pages/private/admin/user-management/components/user-management-table/user-management-table.html
+++ b/src/app/pages/private/admin/user-management/components/user-management-table/user-management-table.html
@@ -1,6 +1,6 @@
 ﻿<section class="section-table-container">
   <!-- Search Panel -->
-  <app-user-management-search-form [searchForm]="searchForm" (clearFilters)="clearFilters()" />
+  <app-user-management-search-form />
 
   <!-- Search Results Info -->
   <div class="search-results-info">
