--- a/src/app/components/forms/input/input.html
+++ b/src/app/components/forms/input/input.html
@@ -13,6 +13,7 @@
 
     @if (type() === 'password') {
     <button
+      class="password-toggle-btn"
       type="button"
       mat-icon-button
       matSuffix
